--- a/q/275522.html
+++ b/q/275522.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>067</td><td>R</td><td>240917T062009Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275576#275576">Dominic </a></td></tr>
-<tr d-ix="1"><td>097</td><td>TIBASIC</td><td>240916T225815Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275570#275570">absolute</a></td></tr>
+<tr d-ix="0"><td>097</td><td>TIBASIC</td><td>240916T225815Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275570#275570">absolute</a></td></tr>
+<tr d-ix="1"><td>067</td><td>R</td><td>240917T062009Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275576#275576">Dominic </a></td></tr>
 <tr d-ix="2"><td>084</td><td>R</td><td>240916T123246Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275556#275556">pajonk</a></td></tr>
 <tr d-ix="3"><td>050</td><td>JavaScript Node.js</td><td>240916T115349Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275554#275554">Fhuvi</a></td></tr>
 <tr d-ix="4"><td>059</td><td>Python</td><td>240916T010600Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275548#275548">STerliak</a></td></tr>
@@ -41,22 +41,7 @@
 <tr d-ix="12"><td>030</td><td>Retina 0.8.2</td><td>240914T055131Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275524#275524">Neil</a></td></tr>
 <tr d-ix="13"><td>nan</td><td>Vyxal</td><td>240914T043133Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275523#275523">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 67 bytes</h1>
-<pre class="lang-r prettyprint-override"><code>\(x,y=rev(utf8ToInt(x)))as.numeric(intToUtf8(c(46[!46%in%y],y)))*10
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m72waMGiNNulpSVpuhY3nWM0KnQqbYtSyzSAAhYh-Z55JRoVmpqaicV6eaW5qUWZyRqZeSUh-aFAWY1kDROzaEUTM9XMPNXKWJ1KoDotQwOoUbFpGkqGRnrGJkqaCsoKJsZGeoZcQCEwAywElgQJGRgagQWgKhDyIJ6xngGYZwzlQHkQSxYsgNAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>Reverse the digits (including the decimal point) and multiply by 10.<br />
-If there isn't a decimal point, add one at the end first.</p>
-<hr />
-<h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 84 bytes</h1>
-<pre class="lang-r prettyprint-override"><code>\(x){w=match(46,d&lt;-c(b&lt;-c(48,utf8ToInt(x)),46));b[w-1:0]=d[w-0:1];intToUtf8(rev(b))}
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m72waMGiNNulpSVpuhY3Q2I0KjSry21zE0uSMzRMzHRSbHSTNZJAhImFDlCNRUi-Z14JUJGmjomZpqZ1UnS5rqGVQaxtCpBhYGUYa52ZVxKSHwpUqVGUWqaRpKlZCzU7Nk1DydBIz9hESVNBWcHE2EjPkAsoBGaAhcCSICEDQyOwAFQFQh7EM9YzAPOMoRwoD2LJggUQGgA" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>Alternative 'tinkering with the decimal point' approach, in response to <a href="https://codegolf.stackexchange.com/a/275556/95126">pajonk's answer</a>...</p>
-<p>Prepend a zero, then find the dot and swap it with the previous character, and finally output the reversed string.<br />
-If there isn't a dot, add one at the end of the string before the swap.</p>
-</div>
-<div id="pu1" class="pu"><h1>TI-BASIC, 97 bytes</h1>
+<div id="pu0" class="pu"><h1>TI-BASIC, 97 bytes</h1>
 <pre><code>Prompt N
 {0,1→L₁
 NAns→L₂
@@ -82,7 +67,7 @@ sub(Str1,1,length(Str1)-3  ; [/1]
 If not(inString(Ans,&quot;.     ; If the number does not have a decimal, append one
   Ans+&quot;.                   ;
 For(I,1,length(Ans)-1      ; [2] Prepend reversed digits
-  sub(Ans,2I,1             ; E.g. &quot;12345&quot; ⇒ &quot;543212345&quot;
+  sub(Ans,2I,1             ; E.g. &quot;123.45&quot; ⇒ &quot;54.32123.45&quot;
 End                        ; [/2]
 sub(Ans,1,I                ; Get the reversed digits
 10expr(Ans                 ; Convert the string to a number, then multiply it
@@ -104,6 +89,21 @@ N=?012
 Program size is equal to <span class="math-container">\$MEM\: byte\: count - program\: name\: length - 9\: bytes\$</span>.</p>
 <p>[1] <a href="http://tibasicdev.wikidot.com/number-to-string" rel="nofollow noreferrer">http://tibasicdev.wikidot.com/number-to-string</a><br />
 [2] <a href="http://tibasicdev.wikidot.com/reverse-a-string" rel="nofollow noreferrer">http://tibasicdev.wikidot.com/reverse-a-string</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 67 bytes</h1>
+<pre class="lang-r prettyprint-override"><code>\(x,y=rev(utf8ToInt(x)))as.numeric(intToUtf8(c(46[!46%in%y],y)))*10
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m72waMGiNNulpSVpuhY3nWM0KnQqbYtSyzSAAhYh-Z55JRoVmpqaicV6eaW5qUWZyRqZeSUh-aFAWY1kDROzaEUTM9XMPNXKWJ1KoDotQwOoUbFpGkqGRnrGJkqaCsoKJsZGeoZcQCEwAywElgQJGRgagQWgKhDyIJ6xngGYZwzlQHkQSxYsgNAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Reverse the digits (including the decimal point) and multiply by 10.<br />
+If there isn't a decimal point, add one at the end first.</p>
+<hr />
+<h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 84 bytes</h1>
+<pre class="lang-r prettyprint-override"><code>\(x){w=match(46,d&lt;-c(b&lt;-c(48,utf8ToInt(x)),46));b[w-1:0]=d[w-0:1];intToUtf8(rev(b))}
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m72waMGiNNulpSVpuhY3Q2I0KjSry21zE0uSMzRMzHRSbHSTNZJAhImFDlCNRUi-Z14JUJGmjomZpqZ1UnS5rqGVQaxtCpBhYGUYa52ZVxKSHwpUqVGUWqaRpKlZCzU7Nk1DydBIz9hESVNBWcHE2EjPkAsoBGaAhcCSICEDQyOwAFQFQh7EM9YzAPOMoRwoD2LJggUQGgA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Alternative 'tinkering with the decimal point' approach, in response to <a href="https://codegolf.stackexchange.com/a/275556/95126">pajonk's answer</a>...</p>
+<p>Prepend a zero, then find the dot and swap it with the previous character, and finally output the reversed string.<br />
+If there isn't a dot, add one at the end of the string before the swap.</p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>89</s> 84 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>\(x,z=na.omit(strtoi(y&lt;-el(strsplit(x,&quot;&quot;)))))z%*%.1^(match(&quot;.&quot;,y,l&lt;-sum(1|z)+1)-2:l)
