--- a/q/275563.html
+++ b/q/275563.html
@@ -26,20 +26,25 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>069</td><td>Ruby</td><td>240917T075106Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275579#275579">G B</a></td></tr>
-<tr d-ix="1"><td>008</td><td>05AB1E</td><td>240917T071811Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275578#275578">Kevin Cr</a></td></tr>
-<tr d-ix="2"><td>059</td><td>JavaScript ES6</td><td>240916T201812Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275566#275566">Arnauld</a></td></tr>
-<tr d-ix="3"><td>013</td><td>Japt</td><td>240916T223015Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275569#275569">Shaggy</a></td></tr>
+<tr d-ix="0"><td>011</td><td>Japt</td><td>240916T223015Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275569#275569">Shaggy</a></td></tr>
+<tr d-ix="1"><td>069</td><td>Ruby</td><td>240917T075106Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275579#275579">G B</a></td></tr>
+<tr d-ix="2"><td>008</td><td>05AB1E</td><td>240917T071811Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275578#275578">Kevin Cr</a></td></tr>
+<tr d-ix="3"><td>059</td><td>JavaScript ES6</td><td>240916T201812Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275566#275566">Arnauld</a></td></tr>
 <tr d-ix="4"><td>097</td><td>Python</td><td>240916T201904Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275567#275567">TheLittl</a></td></tr>
 <tr d-ix="5"><td>625</td><td>Vyxal g</td><td>240916T201441Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275565#275565">pacman25</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 69 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, <s>13</s> 11 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>@°s+X*j)j}a
+</code></pre>
+<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=QLBzK1gqailqfWE&amp;input=OTcyMQ" rel="nofollow noreferrer">Try it</a> or <a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=QLBzK1gqailqfWE&amp;input=WzIsMyw1LDcsMTEsMTMsMTcsOTcyMV0tbQ" rel="nofollow noreferrer">run all test cases</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 69 bytes</h1>
 
 <pre class="lang-ruby prettyprint-override"><code>-&gt;p{2.step.find{|q|(2...r=&quot;#{q+p}#{q}&quot;.to_i).all?{|x|r*q%x&gt;0||x==q}}}
 </code></pre>
 <p><a href="https://tio.run/##KypNqvyfZvtf166g2kivuCS1QC8tMy@luqawRsNIT0@vyFZJubpQu6AWSNYq6ZXkx2dq6iXm5NhX11TUFGkVqlbYGdTUVNjaFtbW1v4vUEiLtjQ3Moz9DwA" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 8 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 8 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>∞Ø.Δ+y«p
 </code></pre>
 <p><a href="https://tio.run/##yy9OTMpM/f//Uce8wzP0zk3Rrjy0uuD/fyMA" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##AS0A0v9vc2FiaWX/MjXDhXB2ecKpPyIg4oaSICI//@KInsOYLs6Uwq4recKrcP99LP8" rel="nofollow noreferrer">verify all test cases</a>.</p>
@@ -55,7 +60,7 @@
 </code></pre>
 <p>Although we skip prime <code>2</code> in the infinite list, since the infinite list starts at 1 and the n'th prime builtin is 0-based, it doesn't matter for the challenge, since appending a <code>2</code> to the sum will always result in an even number, and therefore never a prime.</p>
 </div>
-<div id="pu2" class="pu"><h1>JavaScript (ES6), 59 bytes</h1>
+<div id="pu3" class="pu"><h1>JavaScript (ES6), 59 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>p=&gt;eval(&quot;for(d=q=1;q&lt;d--|q%d&amp;&amp;n%d?1:d=n=d-1&amp;&amp;[++q+p]+q;)q&quot;)
 </code></pre>
@@ -70,11 +75,6 @@
 <pre class="lang-javascript prettyprint-override"><code>p=&gt;(g=d=&gt;q&lt;d--|q%d&amp;&amp;n%d?g(d):d-1?g(n=[++q+p]+q):q)(q=1)
 </code></pre>
 <p><a href="https://tio.run/##DctLDoIwEADQq7CBdNIOYSRKQhw8CGHRUCAo9mOJC@PZreze5t31W8fxtfodrTNTmjl57sTChrtwNYjfkJuisLm5LcJAa5AOWO6lDNIPMkAbQAQmSKOz0W1TublF9CdVq7NqFJGiWlEzlE/thc24y2ZhASD9nN/XoyTEuOvxgXH9TEyXqqr@" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 13 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
-<pre><code>ÈsiU+X j}aÈ*j
-</code></pre>
-<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=yHNpVStYIGp9Ycgqag&amp;input=WzIsMyw1LDcsMTEsMTMsMTcsOTcyMV0tbQ" rel="nofollow noreferrer">Try it</a></p>
 </div>
 <div id="pu4" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 97 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>g=lambda x:all(x%i for i in range(2,x))
