--- a/q/275522.html
+++ b/q/275522.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>066</td><td>R</td><td>240917T062009Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275576#275576">Dominic </a></td></tr>
+<tr d-ix="0"><td>061</td><td>R</td><td>240917T062009Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275576#275576">Dominic </a></td></tr>
 <tr d-ix="1"><td>097</td><td>TIBASIC</td><td>240916T225815Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275570#275570">absolute</a></td></tr>
 <tr d-ix="2"><td>084</td><td>R</td><td>240916T123246Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275556#275556">pajonk</a></td></tr>
 <tr d-ix="3"><td>050</td><td>JavaScript Node.js</td><td>240916T115349Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275554#275554">Fhuvi</a></td></tr>
@@ -41,10 +41,11 @@
 <tr d-ix="12"><td>030</td><td>Retina 0.8.2</td><td>240914T055131Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275524#275524">Neil</a></td></tr>
 <tr d-ix="13"><td>nan</td><td>Vyxal</td><td>240914T043133Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275523#275523">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>67</s> 66 bytes</h1>
-<pre class="lang-r prettyprint-override"><code>\(x,y=rev(utf8ToInt(x)))as.double(intToUtf8(c(46[!46%in%y],y)))*10
+<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>67</s> <s>66</s> 61 bytes</h1>
+<p><em>Edit: -5 bytes thanks to pajonk</em></p>
+<pre class="lang-r prettyprint-override"><code>\(x,y=rev(utf8ToInt(x)))el(intToUtf8(c(46[!46%in%y],y)):1)*10
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m72waMGiNNulpSVpuhY3nWI0KnQqbYtSyzSAAhYh-Z55JRoVmpqaicV6KfmlSTmpGpl5JSH5oUBJjWQNE7NoRRMz1cw81cpYnUqgMi1DA6hJsWkaSoZGesYmSpoKygomxkZ6hlxAITADLASWBAkZGBqBBaAqEPIgnrGeAZhnDOVAeRBLFiyA0AA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=m72waMGiNNulpSVpuhY3bWM0KnQqbYtSyzSAAhYh-Z55JRoVmpqaqTkamXklIfmhQFGNZA0Ts2hFEzPVzDzVylidSk1NK0NNLUMDqCGxaRpKhkZ6xiZKmgrKCibGRnqGXEAhMAMsBJYECRkYGoEFoCoQ8iCesZ4BmGcM5UB5EEsWLIDQAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Reverse the digits (including the decimal point) and multiply by 10.<br />
 If there isn't a decimal point, add one at the end first.</p>
 <hr />
