--- a/q/235964.html
+++ b/q/235964.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>165</td><td>sed 4.2.2 r</td><td>240711T061548Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/274071#274071">guest430</a></td></tr>
+<tr d-ix="0"><td>164</td><td>sed 4.2.2 r</td><td>240711T061548Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/274071#274071">guest430</a></td></tr>
 <tr d-ix="1"><td>069</td><td>Swift 6</td><td>240907T215801Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/275405#275405">macOSist</a></td></tr>
 <tr d-ix="2"><td>018</td><td>ARBLE</td><td>240903T225838Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/275338#275338">ATaco</a></td></tr>
 <tr d-ix="3"><td>045</td><td>Clojure</td><td>240903T135137Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/275319#275319">NikoNyrh</a></td></tr>
@@ -113,26 +113,17 @@
 <tr d-ix="84"><td>005</td><td>Husk</td><td>211004T081650Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/235966#235966">Dominic </a></td></tr>
 <tr d-ix="85"><td>008</td><td>Charcoal</td><td>211004T081405Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/235965#235965">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h2><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-r</code>, <sup><sub><sub><sup> <s>291</s> <s>287</s> <s>276</s> <s>260</s> <s>255</s> <s>251</s> <s>248</s> <s>240</s> <s>233</s> <s>228</s> <s>226</s> <s>220</s> <s>219</s> <s>212</s> <s>209</s> <s>208</s> <s>207</s> <s>196</s> <s>193</s> <s>191</s> <s>184</s> <s>181</s> <s>177</s> <s>175</s> <s>170</s></sup></sub></sub></sup> 165 bytes</h2>
+<div id="pu0" class="pu"><h2><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-r</code>, <sup><sub><sub><sup><sub> <s>291</s> <s>287</s> <s>276</s> <s>260</s> <s>255</s> <s>251</s> <s>248</s> <s>240</s> <s>233</s> <s>228</s> <s>226</s> <s>220</s> <s>219</s> <s>212</s> <s>209</s> <s>208</s> <s>207</s> <s>196</s> <s>193</s> <s>191</s> <s>184</s> <s>181</s> <s>177</s> <s>175</s> <s>173</s> <s>170</s> <s>169</s> <s>165</s></sub></sup></sub></sub></sup> 164 bytes</h2>
 <pre><code>h;G;G
 :;s/.//;x;s/\s.*//
 :a;s/#*/&amp; &amp;/;T;x;s/^##/#/;x;ta
-x;s/#.#//;H;g;s/ //g;T;s/\n##+\n/&amp;/;t
+x;s/#.#//;H;g;s/ //g;/\n##+\n/t;T
 s/^(#+)\n#.(#*)#/\2\n\2\n\2&#9;\1/;h;t
-s/#\n+//;h;T;s/.*&#9;#//;x;s/&#9;#*$//;ta
+s/.#?\n+/#/;h;T;s/.*&#9;#//;x;s/&#9;#*$//;ta
 </code></pre>
-<p><a href="https://tio.run/##ZZDBTsMwDIbPy1NMMqraVMufdBvQptp1PAC3hUmpmNru0CHaAwjx6hRnDFSNQxT/8e/PsfvD81gcbI@dWeRPiAi1eIfJlqv17d19Dv0bQvQgjZxgh@DXQD02dmu3omCpAPvGt@uVBEThOSaJaB7BPp4zeyJQMA1eBE2KuObB1hzPGcY2Lu@IUteBqwZuuI8pTfhNxSQTgstc93NmzsA2Zw@5LkUQoV7JGV1@MiN5w@HgR/Z8GK31JzxP18NfVMWqaNhaoSz/Rq602YRhY5WUSjoTV1IlSm64O9Mazuw0rypFxJBAaJngpwR/TfBTQvufcAzrmBLomkBTwnE0IhNLsRLrr9PL0J66fly8fgM" rel="nofollow noreferrer" title="sed 4.2.2 - Try It Online">Try it online! (cases 1-5; breaks with 0)</a></p>
-<h2><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-r</code>, <s>173</s> 169 bytes, handles 0</h2>
-<pre><code>h;G;G
-:;s/.//;x;s/\s.*//
-:a;s/#*/&amp; &amp;/;T;x;s/^##/#/;x;ta
-x;s/#.#//;H;g;s/ //g;T;s/\n##+\n/&amp;/;t
-s/^(#+)\n#.(#*)#/\2\n\2\n\2&#9;\1/;h;t
-s/#?#?\n+/#/;h;T;s/.*&#9;#//;x;s/&#9;#*$//;ta
-</code></pre>
-<p><a href="https://tio.run/##ZZDBTsMwDIbPy1NMMqraVMufdBuwZtqO4wG4LUxKxdRuhw6RHkCIV6c4Y6BqHKL4j39/sR32z325twFbM1k8ISHU4h2mmM7mt3f3C@jfECKANBYE20W/Buq@sRu7ESVLBdg3vl1QEhCl55gkknEC@3jO7IhA0dR5ETUp4poHW3M8ZhjbuLwlyl0Lrur4w11KecZvKiWZEVzh2p8zcga2OXtoTWvX5pHdnBlKjujSzYjkDYed79n3YbTWn/A8YYC/qIpV2bC1wnL5N3alzSoOnKpsqaQzaSVVpuSKO2Baw5mt5nXlSBgSCQcm@CHBXxP8kHD4TzjGlQwJdE2gIeHYa2FEIaZiJuZfp5fucGpDP3n9Bg" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online! (cases 0-4)</a><br />
+<p><a href="https://tio.run/##ZZDfTsIwFMav6VOQHLNsXejXDlBZCV7iA3BHJeki2eBiGNcLjfHVnaeKZoGLpt/Xc/o7f7r9c1/ubYetmSyekBBq8Q5TTGfz27v7BfSfhOhAGguCDTFfA3Xf2LVdi5KtAuwb365TEhClZ00SyTiB3fxEdkSgmBS8iJ4U8Z9HW7MeM8zCtUS5axHshovtUsozflIpyYzgCtf@npEzsI0NnKPowbV5xDZchb0c0bmREckblsH3XOrDaK0/4Xm4Dv7sKnZlw6kVlsv/iSttVnHWVGVLJZ1JK6kyJVfcANMajmw1bypHwpBIODDBDwn@kuCHhMM14Ri3MSTQJYGGhGOvhRGFmIqZmH@dXsLh1Hb95PUb" rel="nofollow noreferrer" title="sed 4.2.2 - Try It Online">Try it online! (cases 0-5)</a><br />
 <a href="https://tio.run/##XZDPasMwDMbP01MUBCFxqD87/bfEodfuAXZrVjCspOkhHXMOG2OvPk/u2Cg7GEvW9/0kORyfY3N0AXs7r5@QMXp6h60Wy9V6c1/D/IagADaoGW5KegP08eR2bkeNpBpwb3J3QSuAGi8xK2SzDO7xWjkwg5No8pRy1iyeB9dLPBOYyMQ@MpfdCHFN0vCQc1nIm85ZFYyu6safc9dZuNNVo5XoGVGIH9YY8wkvOzSD0Dza9m8Vb@w2LZHrohWPzb3ShVZboUqzQSp7I19QIhNIIpzTkLcE/k/gW8I5GrJU0YKWtKI1bb4uL9NwGUOcv34D" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online! (cases 0-7; calculate the powers but don't multiply them together)</a></p>
-<p>takes input and output as unary <code>#</code>s. TIO links include conversion to/from decimal in header/footer. the difference between the two versions is the last line.</p>
+<p>takes input and output as unary <code>#</code>s. TIO links include conversion to/from decimal in header/footer.</p>
 <p>after two months and 100 bytes of golfing, I think it's high time to actually write out an explanation. normally, I add the explanation in comments next to the code, but I think explaining the data format first will work better with this one. the PATTERN and HOLD spaces are switched around a lot, but let's call this the initial PATTERN space:</p>
 <pre><code>add
 mult
