--- a/q/77857.html
+++ b/q/77857.html
@@ -26,10 +26,10 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>069</td><td>Uiua</td><td>240908T201054Z</td><td><a href="https://codegolf.stackexchange.com/questions/77857/expand-a-c-array/275423#275423">nyxbird</a></td></tr>
-<tr d-ix="1"><td>111</td><td>JavaScript</td><td>240910T102147Z</td><td><a href="https://codegolf.stackexchange.com/questions/77857/expand-a-c-array/275451#275451">Shaggy</a></td></tr>
-<tr d-ix="2"><td>039</td><td>Japt R</td><td>240909T142727Z</td><td><a href="https://codegolf.stackexchange.com/questions/77857/expand-a-c-array/275436#275436">Shaggy</a></td></tr>
-<tr d-ix="3"><td>061</td><td>MATL</td><td>160415T193507Z</td><td><a href="https://codegolf.stackexchange.com/questions/77857/expand-a-c-array/77868#77868">Luis Men</a></td></tr>
+<tr d-ix="0"><td>061</td><td>MATL</td><td>160415T193507Z</td><td><a href="https://codegolf.stackexchange.com/questions/77857/expand-a-c-array/77868#77868">Luis Men</a></td></tr>
+<tr d-ix="1"><td>069</td><td>Uiua</td><td>240908T201054Z</td><td><a href="https://codegolf.stackexchange.com/questions/77857/expand-a-c-array/275423#275423">nyxbird</a></td></tr>
+<tr d-ix="2"><td>111</td><td>JavaScript</td><td>240910T102147Z</td><td><a href="https://codegolf.stackexchange.com/questions/77857/expand-a-c-array/275451#275451">Shaggy</a></td></tr>
+<tr d-ix="3"><td>039</td><td>Japt R</td><td>240909T142727Z</td><td><a href="https://codegolf.stackexchange.com/questions/77857/expand-a-c-array/275436#275436">Shaggy</a></td></tr>
 <tr d-ix="4"><td>125</td><td>JavaScript ES6</td><td>160415T192712Z</td><td><a href="https://codegolf.stackexchange.com/questions/77857/expand-a-c-array/77865#77865">Conor O&</a></td></tr>
 <tr d-ix="5"><td>037</td><td>V</td><td>160419T062556Z</td><td><a href="https://codegolf.stackexchange.com/questions/77857/expand-a-c-array/78054#78054">DJMcMayh</a></td></tr>
 <tr d-ix="6"><td>115</td><td>Clojure</td><td>170101T215710Z</td><td><a href="https://codegolf.stackexchange.com/questions/77857/expand-a-c-array/105297#105297">NikoNyrh</a></td></tr>
@@ -55,12 +55,42 @@
 <tr d-ix="26"><td>159</td><td>Python 2</td><td>160415T184942Z</td><td><a href="https://codegolf.stackexchange.com/questions/77857/expand-a-c-array/77858#77858">user4594</a></td></tr>
 <tr d-ix="27"><td>047</td><td>05AB1E</td><td>160415T192216Z</td><td><a href="https://codegolf.stackexchange.com/questions/77857/expand-a-c-array/77863#77863">Adnan</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, 69 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, 61 bytes</h1>
+<p><em>Thank you to <a href="https://codegolf.stackexchange.com/users/58974/shaggy">@Shaggy</a> for pointing out a mistake, now corrected.</em></p>
+<pre><code>'[-\w]+'XX2:H#)XKxXIZc'['KnV'];'v!K&quot;I2X)'['X@qV'] = '@g';'6$h
+</code></pre>
+<p>This isn't C, <s>but it does use C-like <code>sprintf</code> function</s> Nah, that was wasting 4 bytes.</p>
+<p><a href="https://tio.run/##y00syfn/Xz1aN6Y8Vls9IsLIykNZM8K7IsIzKlk9Wt07L0w91lq9TNFbydMoQhMoEuFQCBRSsFVQd0hXt1Y3U8kAai9JLSrKTMpJjc/Jz0uPL6ksSI3PS8xNVUgsTyvNiU8sKkqsBAtEgzRWm@so6FroKBgaGwNZBiBGrToA" rel="nofollow noreferrer"><strong>Try it online!</strong></a></p>
+<pre><code>            % Take input implicitly
+'[-\w]+'XX  % Find substrings that match regex '\w+'. Gives a cell array
+2:H#)       % Split into a subarray with the first two substrings (type and name),
+            % and another with the rest (numbers that form the array)
+XKx         % Copy the latter (numbers) into clipboard K. Delete it
+XI          % Copy the former (type and name) into clipboard I
+Zc          % Join the first two substrings with a space
+'['         % Push this string
+K           % Paste array of numbers
+nV          % Get its length. Convert to string
+'];'        % Push this string
+v!          % Concatenate all strings up to now. Gives first line of the output
+K&quot;          % For each number in the array
+  I2X)      %   Get name of array as a string
+  '['       %   Push this string
+  X@qV      %   Current iteration index, starting at 0, as a string
+  '] = '    %   Push this string
+  @g        %   Current number of the array, as a string
+  ';'       %   Push this string
+  5$h       %   Concatenate top 6 strings. This is a line of the output
+            % Implicitly end for each
+            % Implicitly display
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, 69 bytes</h1>
 <pre><code>⊂⊃(□$&quot;_ _[_];&quot;|⍚$&quot;_[_] = _;&quot;¤⋅⊙⊓⇡∘)⊙⊙(⊸⧻⊜□≥@0.)°$&quot;_ _[] = {_};&quot;
 </code></pre>
 <p><a href="https://www.uiua.org/pad?src=0_13_0-dev_2__ZiDihpAg4oqC4oqDKOKWoSQiXyBfW19dOyJ84o2aJCJfW19dID0gXzsiwqTii4XiipniipPih6HiiJgp4oqZ4oqZKOKKuOKnu-KKnOKWoeKJpUAwLinCsCQiXyBfW10gPSB7X307IgpmICJpbnQgZm9vW10gPSB7NCwgOCwgMTUsIDE2LCAyMywgNDJ9OyIKZiAic2hvcnQgYXJyYXlbXSA9IHs0LCAzLCAyLCAxfTsiCmYgInNwYW0gRUdHU1tdID0gezQyfTsiCmYgInRlcnJpYmxlX2xvbmdfdHlwZV9uYW1lIGF3ZnVsX2FycmF5X25hbWVbXSA9IHs3LCDCrzgsIDEzMzcsIDAsIDEzfTsiCg==" rel="nofollow noreferrer">Try it!</a></p>
 </div>
-<div id="pu1" class="pu"><h1>JavaScript, 111 bytes</h1>
+<div id="pu2" class="pu"><h1>JavaScript, 111 bytes</h1>
 <p>A recursive approach that didn't work out quite as well as I hoped but nowhere near as bad as I feared.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>f=(s,[x,y,...a]=s.match(/-?\w+\[?/g),n)=&gt;y?(n?`;
@@ -68,7 +98,7 @@ ${x+~-n}] = `+y:x+` ${y+a.length}]`)+f(s,[n?x:y,...a],-~n):`;`
 </code></pre>
 <p><a href="https://tio.run/##LY1LDoIwFAD3nqILFm36QeNCA8EeBAl9kvIxUEmpQkPw6ijG3WQWM3d4wVDYpnf8dV7XMsEDSyfmmRACsmQQHbiixiGX15FeUxlWhBmSXLzERqp4F8wTfXOzZChBivpoogoFs6cgWm0qVy@ZIrTcokZO0T/L@NuQSMVqHW3jNC6xctra5tbqvH2YKne@17mBTiMYy2ebg7XgfyLdRvOJIX5m6HA8fmm/wRIrQtYP" rel="nofollow noreferrer">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-R</code></a>, <s>41</s> <s>40</s> 39 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-R</code></a>, <s>41</s> <s>40</s> 39 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <p>This started out horrible, and got progressively worse over a few hours! And, <em>just</em> as I had it down to a byte count I was somewhat happy with at least, I spotted the inclusion of the <code>;</code> on each line of output and it got even more horrible!</p>
 <p>Took a break for a bit, tried a fresh approach, and ended up with <del><em>a one-liner that has</em></del> * a better score than my original attempt. It's still a horrible solution, though!</p>
 <pre><code>f&quot;-?%d+&quot; £¸ÅÎ¸p¥ÅXÃpU¸v2)£ÌiX¸r']ÈiT°
@@ -104,35 +134,6 @@ f                                          :Match
                                    \n      :End map
                                      é     :Rotate right
                                            :Implicit output joined with newlines
-</code></pre>
-</div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, 61 bytes</h1>
-<pre><code>'[-\w]+'XX2:H#)XKxXIZc'['KnV'];'v!K&quot;I2X)'['X@qV'] = '@g';'6$h
-</code></pre>
-<p>This isn't C, <s>but it does use C-like <code>sprintf</code> function</s> Nah, that was wasting 4 bytes.</p>
-<p><a href="https://tio.run/##y00syfn/Xz1aN6Y8Vls9IsLIykNZM8K7IsIzKlk9Wt07L0w91lq9TNFbydMoQhMoEuFQCBRSsFVQd0hXt1Y3U8kAai9JLSrKTMpJjc/Jz0uPL6ksSI3PS8xNVUgsTyvNiU8sKkqsBAtEgzRWm@so6FroKBgaGwNZBiBGrToA" rel="nofollow noreferrer"><strong>Try it online!</strong></a></p>
-<pre><code>            % Take input implicitly
-'[-\w]+'XX  % Find substrings that match regex '\w+'. Gives a cell array
-2:H#)       % Split into a subarray with the first two substrings (type and name),
-            % and another with the rest (numbers that form the array)
-XKx         % Copy the latter (numbers) into clipboard K. Delete it
-XI          % Copy the former (type and name) into clipboard I
-Zc          % Join the first two substrings with a space
-'['         % Push this string
-K           % Paste array of numbers
-nV          % Get its length. Convert to string
-'];'        % Push this string
-v!          % Concatenate all strings up to now. Gives first line of the output
-K&quot;          % For each number in the array
-  I2X)      %   Get name of array as a string
-  '['       %   Push this string
-  X@qV      %   Current iteration index, starting at 0, as a string
-  '] = '    %   Push this string
-  @g        %   Current number of the array, as a string
-  ';'       %   Push this string
-  5$h       %   Concatenate top 6 strings. This is a line of the output
-            % Implicitly end for each
-            % Implicitly display
 </code></pre>
 </div>
 <div id="pu4" class="pu"><h1>JavaScript ES6, <s>134</s> <s>132</s> <s>130</s> <s>129</s> 125 bytes</h1>
