--- a/q/275564.html
+++ b/q/275564.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>092</td><td>Ruby</td><td>240917T084403Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275580#275580">G B</a></td></tr>
+<tr d-ix="0"><td>069</td><td>Ruby</td><td>240917T084403Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275580#275580">G B</a></td></tr>
 <tr d-ix="1"><td>018</td><td>Jelly</td><td>240916T234630Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275571#275571">Unrelate</a></td></tr>
 <tr d-ix="2"><td>093</td><td>Python 3</td><td>240917T000136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275572#275572">David Ch</a></td></tr>
 <tr d-ix="3"><td>125</td><td>Wolfram Language Mathematica</td><td>240917T024742Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275575#275575">138 Aspe</a></td></tr>
@@ -34,13 +34,12 @@
 <tr d-ix="5"><td>121</td><td>Javascript Node.JS</td><td>240917T021829Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275574#275574">Jake</a></td></tr>
 <tr d-ix="6"><td>173</td><td>Perl 5.10</td><td>240916T221329Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275568#275568">Kjetil S</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>93</s> 92 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>93 ...</s> 69 bytes</h1>
 
-<pre class="lang-ruby prettyprint-override"><code>-&gt;n{(1..n).sum{|x|(w=1..2**x).sum{|r|w.count{|c|(r*r+c*c...(r+r%2)**2+(c+c%2)**2)===4**x}}}}
+<pre class="lang-ruby prettyprint-override"><code>-&gt;n{-3*(1..n).sum{|x|n=(1..2**x).sum{|i|((4**x-i*i)**0.5).to_i}}+n*4}
 </code></pre>
-<p><a href="https://tio.run/##LYxBDsIwDAS/wqXIdlSLRlzNX8BSbw2VS9SiuG8Pqcqedlaatfz61lFq/0gFBuaEvOSp@OawSuNItP0n85X1ndOnuDoYWVBSZgYL1kUkigE06FlRRO7N3VvqfDmuhxvy9JzhOmL9AQ" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
-<h3>The basic idea</h3>
-<p>On any iteration, add all the squares where at least one of the coordinates is odd, and only if it's not enclosed in a bigger square (add 1 to the odd coordinates, check that the bigger square is not inside the circle).</p>
+<p><a href="https://tio.run/##KypNqvyfZvtf1y6vWtdYS8NQTy9PU6@4NLe6pqImzxbEN9LSqoAKZdZoaJgAubqZWpmaWloGeqaaeiX58Zm1tdp5Wia1/wsUQBoMDTT1chMLNNTSNP8DAA" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
+<p>Using the same approach as @David Chew in his Python solution, avoiding recursion makes it shorter and faster.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 18 bytes</h1>
 <pre><code>Ż2*R²ạ²Ʋ€½Ḟ§Äṫ-ḅ-4
