--- a/q/275563.html
+++ b/q/275563.html
@@ -26,22 +26,29 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>168</td><td>Rust</td><td>240917T104954Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275584#275584">bzr</a></td></tr>
-<tr d-ix="1"><td>009</td><td>Brachylog</td><td>240917T093109Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275581#275581">Fatalize</a></td></tr>
-<tr d-ix="2"><td>011</td><td>Japt</td><td>240916T223015Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275569#275569">Shaggy</a></td></tr>
-<tr d-ix="3"><td>069</td><td>Ruby</td><td>240917T075106Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275579#275579">G B</a></td></tr>
-<tr d-ix="4"><td>008</td><td>05AB1E</td><td>240917T071811Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275578#275578">Kevin Cr</a></td></tr>
-<tr d-ix="5"><td>059</td><td>JavaScript ES6</td><td>240916T201812Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275566#275566">Arnauld</a></td></tr>
-<tr d-ix="6"><td>097</td><td>Python</td><td>240916T201904Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275567#275567">TheLittl</a></td></tr>
-<tr d-ix="7"><td>625</td><td>Vyxal g</td><td>240916T201441Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275565#275565">pacman25</a></td></tr>
+<tr d-ix="0"><td>130</td><td>SageMath</td><td>240917T105516Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275585#275585">Sophia A</a></td></tr>
+<tr d-ix="1"><td>167</td><td>Rust</td><td>240917T104954Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275584#275584">bzr</a></td></tr>
+<tr d-ix="2"><td>009</td><td>Brachylog</td><td>240917T093109Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275581#275581">Fatalize</a></td></tr>
+<tr d-ix="3"><td>011</td><td>Japt</td><td>240916T223015Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275569#275569">Shaggy</a></td></tr>
+<tr d-ix="4"><td>069</td><td>Ruby</td><td>240917T075106Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275579#275579">G B</a></td></tr>
+<tr d-ix="5"><td>008</td><td>05AB1E</td><td>240917T071811Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275578#275578">Kevin Cr</a></td></tr>
+<tr d-ix="6"><td>059</td><td>JavaScript ES6</td><td>240916T201812Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275566#275566">Arnauld</a></td></tr>
+<tr d-ix="7"><td>097</td><td>Python</td><td>240916T201904Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275567#275567">TheLittl</a></td></tr>
+<tr d-ix="8"><td>625</td><td>Vyxal g</td><td>240916T201441Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275565#275565">pacman25</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, 168 bytes</h1>
-<pre class="lang-rust prettyprint-override"><code>let g=|n|{if n==2{return true;}
-for i in 2..n{if n%i==0{return false;}}true};let f=|p:i32|{for q in 2..{if g(q)&amp;&amp;g(format!(&quot;{}{q}&quot;,p+q).parse().unwrap()){return q;}}0};
+<div id="pu0" class="pu"><h1><a href="https://www.sagemath.org" rel="nofollow noreferrer">SageMath</a>, 130 bytes</h1>
+<pre><code>def g(p): 
+ for q in Primes(): 
+  if is_prime(q+(p+q)*10^(1+int(log(q)/log(10)))):return q
+print([g(p) for p in prime_range(100)])
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=NY5BCsIwEEX3nmIsWBLUUOpGLDlMFkkJtGOTJrhIchI3FRQET-RtbKyuPnze-zPXu_Wjm14KoRcaCYXw8E7tj-9nJx20PGIMWgFyXgcrnbcIznrZpJU6W9CgEWrG8MtsNOfVn1KiG2csZTo1eUzxOJz0oY4hq-anZrMlhpZlS-a-F25NipCCScVu2BrKBmFHSSjzeLFiIJT-L5h5vUrN8u8tLTlNS34A" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, 9 bytes</h1>
+<div id="pu1" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, 167 bytes</h1>
+<pre class="lang-rust prettyprint-override"><code>let g=|n|{if n==2{return true;}for i in 2..n{if n%i==0{return false;}}true};let f=|p:i32|{for q in 2..{if g(q)&amp;&amp;g(format!(&quot;{}{q}&quot;,p+q).parse().unwrap()){return q;}}0};
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=NY5BCsIwEEWvMhYsCWoodSOWHCaLpATasUkTXCQ5iZsKigtP5G1srF19-Lz3Z24P60c3vRVCLzQSCuHpnTqcPq9OOmh5xBi0AuS8DlY6bxGc9bJJ6mJBg0aoGcMfstWcVyukRDfOVMpwavKW4nE462MdQ1bNX81mSwwty5bMfS_chhQhBZOK_bAzlA3CjpJQ5vFqxUAoXS-Yeb1KzfLuPS05TUt-AQ" rel="nofollow noreferrer">Attempt This Online!</a></p>
+</div>
+<div id="pu2" class="pu"><h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, 9 bytes</h1>
 <pre><code>;.+;.cṗ∧ṗ
 </code></pre>
 <p><a href="https://tio.run/##SypKTM6ozMlPN/r/31pP21ov@eHO6Y86lgPJ//8tzY0M/0cBAA" rel="nofollow noreferrer" title="Brachylog – Try It Online">Try it online!</a></p>
@@ -52,7 +59,7 @@ for i in 2..n{if n%i==0{return false;}}true};let f=|p:i32|{for q in 2..{if g(q)&
        ∧ṗ   …and Output itself is prime
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, <s>13</s> 11 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, <s>13</s> 11 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>@°s+X*j)j}a
 </code></pre>
 <p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=QLBzK1gqailqfWE&amp;input=OTcyMQ" rel="nofollow noreferrer">Try it</a> or <a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=QLBzK1gqailqfWE&amp;input=WzIsMyw1LDcsMTEsMTMsMTcsOTcyMV0tbQ" rel="nofollow noreferrer">run all test cases</a></p>
@@ -68,13 +75,13 @@ for i in 2..n{if n%i==0{return false;}}true};let f=|p:i32|{for q in 2..{if g(q)&
           a     :Get the first integer &gt;=0 that returns truthy
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 69 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 69 bytes</h1>
 
 <pre class="lang-ruby prettyprint-override"><code>-&gt;p{2.step.find{|q|(2...r=&quot;#{q+p}#{q}&quot;.to_i).all?{|x|r*q%x&gt;0||x==q}}}
 </code></pre>
 <p><a href="https://tio.run/##KypNqvyfZvtf166g2kivuCS1QC8tMy@luqawRsNIT0@vyFZJubpQu6AWSNYq6ZXkx2dq6iXm5NhX11TUFGkVqlbYGdTUVNjaFtbW1v4vUEiLtjQ3Moz9DwA" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 8 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 8 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>∞Ø.Δ+y«p
 </code></pre>
 <p><a href="https://tio.run/##yy9OTMpM/f//Uce8wzP0zk3Rrjy0uuD/fyMA" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##AS0A0v9vc2FiaWX/MjXDhXB2ecKpPyIg4oaSICI//@KInsOYLs6Uwq4recKrcP99LP8" rel="nofollow noreferrer">verify all test cases</a>.</p>
@@ -90,7 +97,7 @@ for i in 2..n{if n%i==0{return false;}}true};let f=|p:i32|{for q in 2..{if g(q)&
 </code></pre>
 <p>Although we skip prime <code>2</code> in the infinite list, since the infinite list starts at 1 and the n'th prime builtin is 0-based, it doesn't matter for the challenge, since appending a <code>2</code> to the sum will always result in an even number, and therefore never a prime.</p>
 </div>
-<div id="pu5" class="pu"><h1>JavaScript (ES6), 59 bytes</h1>
+<div id="pu6" class="pu"><h1>JavaScript (ES6), 59 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>p=&gt;eval(&quot;for(d=q=1;q&lt;d--|q%d&amp;&amp;n%d?1:d=n=d-1&amp;&amp;[++q+p]+q;)q&quot;)
 </code></pre>
@@ -106,13 +113,13 @@ for i in 2..n{if n%i==0{return false;}}true};let f=|p:i32|{for q in 2..{if g(q)&
 </code></pre>
 <p><a href="https://tio.run/##DctLDoIwEADQq7CBdNIOYSRKQhw8CGHRUCAo9mOJC@PZreze5t31W8fxtfodrTNTmjl57sTChrtwNYjfkJuisLm5LcJAa5AOWO6lDNIPMkAbQAQmSKOz0W1TublF9CdVq7NqFJGiWlEzlE/thc24y2ZhASD9nN/XoyTEuOvxgXH9TEyXqqr@" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 97 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 97 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>g=lambda x:all(x%i for i in range(2,x))
 f=lambda p,q=2:q if g(q)*g(int(f'{p+q}{q}'))else f(p,q+1)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=PY9BCsIwEEX3PcVspImNi0SkWug9BHERNamBmCZthEroSdx0o3fyNqbUuhiYgT___f9824e_1mYYXncvV9sPr0rNb6cLh67gWqNuoUDWDShQBhpuKoEY6TBO5KyzxJWscKAkVMjhZYWU8UimwWauD65PMRa6FSBRVGYU_0B7L1p_5q1ooYQDI7AmsCGQE6A0Trxo3Hc5o8dkDODHAP-fAmwzYSQKvsfRI0jkcaRN_nOhLw" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="noreferrer">Vyxal</a> <code>g</code>, 50 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="noreferrer">bits<sup>v2</a></sup>, 6.25 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="noreferrer">Vyxal</a> <code>g</code>, 50 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="noreferrer">bits<sup>v2</a></sup>, 6.25 bytes</h1>
 <pre><code>Þp'⁰+nJæ
 </code></pre>
 <pre><code>Þp'⁰+nJæ­⁡​‎‎⁪⁡⁪⁠⁪⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁪‏‏​⁡⁠⁡‌⁢​‎⁪⁪⁠⁪⁪⁠‎⁪⁡⁪⁠⁪⁣⁪‏‏​⁡⁠⁡‌⁣​‎‎⁪⁡⁪⁠⁪⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁪‏‏​⁡⁠⁡‌⁤​‎‎⁪⁡⁪⁠⁪⁢⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁣⁪‏‏​⁡⁠⁡‌⁢⁡​‎‎⁪⁡⁪⁠⁪⁢⁤⁪‏‏​⁡⁠⁡‌­
