--- a/q/106976.html
+++ b/q/106976.html
@@ -26,24 +26,24 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>224</td><td>Python 3.8 prerelease</td><td>240628T140335Z</td><td><a href="https://codegolf.stackexchange.com/questions/106976/hex-dump-your-source-code/273834#273834">squarero</a></td></tr>
+<tr d-ix="0"><td>112</td><td>Python 3.8 prerelease</td><td>240628T140335Z</td><td><a href="https://codegolf.stackexchange.com/questions/106976/hex-dump-your-source-code/273834#273834">squarero</a></td></tr>
 <tr d-ix="1"><td>162</td><td>JavaScript ES6</td><td>170116T095022Z</td><td><a href="https://codegolf.stackexchange.com/questions/106976/hex-dump-your-source-code/106994#106994">Luke</a></td></tr>
 <tr d-ix="2"><td>081</td><td>Perl</td><td>170116T121734Z</td><td><a href="https://codegolf.stackexchange.com/questions/106976/hex-dump-your-source-code/107005#107005">primo</a></td></tr>
 <tr d-ix="3"><td>112</td><td>Ruby</td><td>170116T131334Z</td><td><a href="https://codegolf.stackexchange.com/questions/106976/hex-dump-your-source-code/107010#107010">G B</a></td></tr>
 <tr d-ix="4"><td>039</td><td>V</td><td>170116T175622Z</td><td><a href="https://codegolf.stackexchange.com/questions/106976/hex-dump-your-source-code/107032#107032">DJMcMayh</a></td></tr>
 <tr d-ix="5"><td>061</td><td>Perl + xxd + cut</td><td>170116T171232Z</td><td><a href="https://codegolf.stackexchange.com/questions/106976/hex-dump-your-source-code/107027#107027">user6213</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 336 </s> <s> 288 </s> <s> 240 </s> 224 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 336 </s> <s> 288 </s> <s> 240 </s> <s> 224 </s> 112 bytes</h1>
 <p><em>-48 bytes by using <code>bytes.hex()</code>.</em><br />
 <em>-48 bytes by using <code>str.replace()</code> instead of a list comprehension.</em><br />
 <em>-16 bytes by redoing the valid half of revision 4.</em><br />
-<em>±0 bytes: fixed left column.</em></p>
-<p>I stole primo's idea of doing <s>21</s> <s>18</s> <s>15</s> 14 × 16 bytes.</p>
+<em>±0 bytes: fixed left column.</em><br />
+<em>-112 bytes by using the</em> <code>exec()</code> <em>trick.</em></p>
+<p>I stole primo's idea of doing <s>21</s> <s>18</s> <s>15</s> <s>14</s> 7 × 16 bytes.</p>
 
-<pre class="lang-python prettyprint-override"><code>a=&quot;a=%     r\nfor i in range(14):print(f'{i:03x}0:',(c:=(a%%a)[i*16:-~i*16]).encode().hex(' '),'',c.replace('\\n','.'))&quot;
-for i in range(14):print(f'{i:03x}0:',(c:=(a%a)[i*16:-~i*16]).encode().hex(' '),'',c.replace('\n','.'))
+<pre class="lang-python prettyprint-override"><code>exec(d:=&quot;for       i in range(7):print(f'00{i}0:',(c:=(f'exec(d:={d!r})')[i*16:][:16]).encode().hex(' '),'',c)&quot;)
 </code></pre>
-<p><a href="https://tio.run/##lc1BCsIwEEDRvacIhTAzEkNLpUggJ7EuQkxtQCYhdFERvXqkCw/Qv/nLl1/LnLi/5FKrs42zUmyVkadURBSRRXH8CNidyeQSecEJ3tG0/fppDSj0xqKT0tE1HrvBnL7bbqQD@3QPSHoOK4IAUgDK6xLy0/mAMI4MCjQQNYdd1H7pD9X6Aw" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##NctBCoMwEEDRq6RuZqYEiRRsGfAk4kKSsWaThMGFRTx7Wij@3Vv88tnWnB6vorXKLh4DD82S1fyLJiajc3oLPomLxrThAs4d8XQMFj0PP1/jEW56EtAY713P08hdP1EryecgSO0qO4IBsgDWU0O1fgE" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1>JavaScript (ES6) <s>229</s> <s>219</s> 162 bytes</h1>
 
