--- a/q/275564.html
+++ b/q/275564.html
@@ -26,22 +26,32 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>069</td><td>Ruby</td><td>240917T084403Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275580#275580">G B</a></td></tr>
-<tr d-ix="1"><td>018</td><td>Jelly</td><td>240916T234630Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275571#275571">Unrelate</a></td></tr>
-<tr d-ix="2"><td>093</td><td>Python 3</td><td>240917T000136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275572#275572">David Ch</a></td></tr>
+<tr d-ix="0"><td>083</td><td>Python 3</td><td>240917T000136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275572#275572">David Ch</a></td></tr>
+<tr d-ix="1"><td>069</td><td>Ruby</td><td>240917T084403Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275580#275580">G B</a></td></tr>
+<tr d-ix="2"><td>018</td><td>Jelly</td><td>240916T234630Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275571#275571">Unrelate</a></td></tr>
 <tr d-ix="3"><td>125</td><td>Wolfram Language Mathematica</td><td>240917T024742Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275575#275575">138 Aspe</a></td></tr>
 <tr d-ix="4"><td>nan</td><td>Scala 3</td><td>240917T021529Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275573#275573">138 Aspe</a></td></tr>
 <tr d-ix="5"><td>121</td><td>Javascript Node.JS</td><td>240917T021829Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275574#275574">Jake</a></td></tr>
 <tr d-ix="6"><td>173</td><td>Perl 5.10</td><td>240916T221329Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275568#275568">Kjetil S</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>93 ...</s> 69 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, <s>100</s> <s>93</s> 83 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>lambda m:sum((4**n-i*i)**.5//1*(n//m*4-3)for n in range(m+1)for i in range(1,2**n))
+</code></pre>
+<p>(Old: <a href="https://tio.run/##XctJCoAwDEDRq3SZBAfqsFE8TEVbAxql1oWnr3UluP28f9xh2aWO0Q6r2cbJKOnOawNoiCRnYiQq2rLUdveKFYvyRtwMOqsSQOzd91kQzN@5JguMvyPh@EuVxu7wLAFc8hgf" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a>)</p>
+<p>-7 bytes thanks to emanresuA: <a href="https://tio.run/##XYrBDoIwEAXvfsUedxcrKcKFxI@pwdZN5EEqHvz60nAx8TTJzKzf7bngWkq6vcJ8nwJhBAVMFBnieq1wXpp04BR/1/szM/eqcKYmqpehbX1cMhkZKAekB/tzVweR8uc7L@OaDRsntpp3" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+<p>-10 bytes thanks to GB and emanresuA: <a href="https://tio.run/##XcsxDoMwDEDRq2S0TSEKoQtSb8ISBARL2KAUBk4fEEulru/rb@c@r@pz/HR5CdIPwUj7PQSgIdKSiZGoelvrCNRaoab0OK3JqGE1KWgcQQr3EP/Ivep7R8z/7rHdEusOEfjOFw" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+<p>(Old: <code>f</code> calculates A156790 and the first lambda function takes the sum of the first <code>n</code> terms of A177144.)</p>
+<p>Same as old, but <code>f</code> is combined with <code>g</code> by using a double <code>for</code> loop and <code>(n//m*4-3)</code>, which in this context is <code>1</code> only for <code>n==m</code> and <code>-3</code> otherwise.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>93 ...</s> 69 bytes</h1>
 
 <pre class="lang-ruby prettyprint-override"><code>-&gt;n{-3*(1..n).sum{|x|n=(1..2**x).sum{|i|((4**x-i*i)**0.5).to_i}}+n*4}
 </code></pre>
 <p><a href="https://tio.run/##KypNqvyfZvtf1y6vWtdYS8NQTy9PU6@4NLe6pqImzxbEN9LSqoAKZdZoaJgAubqZWpmaWloGeqaaeiX58Zm1tdp5Wia1/wsUQBoMDTT1chMLNNTSNP8DAA" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
 <p>Using the same approach as @David Chew in his Python solution, avoiding recursion makes it shorter and faster.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 18 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 18 bytes</h1>
 <pre><code>Ż2*R²ạ²Ʋ€½Ḟ§Äṫ-ḅ-4
 </code></pre>
 <p><a href="https://tio.run/##ATMAzP9qZWxsef//xbsyKlLCsuG6ocKyxrLigqzCveG4nsKnw4Thuast4biFLTT/w4cpWf//MTA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -68,15 +78,6 @@
 </code></pre>
 <p><a href="https://tio.run/##AUAAv/9qZWxsef//VcK7XFUpCjIqUsKy4bqhwrLGssK9UuG7jTLDhzIqwqtaZ0rigqzGssOHRsSwwrJT/8OHKVn//zEw" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
 <p>Hacked together to try to do it graphically. Miraculously seems to work.</p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, <s>100</s> 93 bytes</h1>
-
-<pre class="lang-python prettyprint-override"><code>g=lambda n:n and f(n)-4*f(n-1)+g(n-1)
-f=lambda n:sum((4**n-i*i)**.5//1for i in range(1,2**n))
-</code></pre>
-<p>(Old: <a href="https://tio.run/##XctJCoAwDEDRq3SZBAfqsFE8TEVbAxql1oWnr3UluP28f9xh2aWO0Q6r2cbJKOnOawNoiCRnYiQq2rLUdveKFYvyRtwMOqsSQOzd91kQzN@5JguMvyPh@EuVxu7wLAFc8hgf" rel="nofollow noreferrer">Try it online!</a>)</p>
-<p>-7 bytes thanks to emanresuA: <a href="https://tio.run/##XYrBDoIwEAXvfsUedxcrKcKFxI@pwdZN5EEqHvz60nAx8TTJzKzf7bngWkq6vcJ8nwJhBAVMFBnieq1wXpp04BR/1/szM/eqcKYmqpehbX1cMhkZKAekB/tzVweR8uc7L@OaDRsntpp3" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
-<p><code>f</code> calculates A156790 and the first lambda function takes the sum of the first <code>n</code> terms of A177144.</p>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 125 bytes</h1>
 <p>use quick <code>floorSqrt</code> from <a href="https://mathematica.stackexchange.com/a/165047/79318">this answer</a>.</p>
