--- a/q/32024.html
+++ b/q/32024.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>126</td><td>Javascript</td><td>240826T170324Z</td><td><a href="https://codegolf.stackexchange.com/questions/32024/i-am-passive-aggressive-and-want-to-insult-my-boss-without-him-finding-out/275164#275164">ThePlane</a></td></tr>
+<tr d-ix="0"><td>124</td><td>Javascript</td><td>240826T170324Z</td><td><a href="https://codegolf.stackexchange.com/questions/32024/i-am-passive-aggressive-and-want-to-insult-my-boss-without-him-finding-out/275164#275164">ThePlane</a></td></tr>
 <tr d-ix="1"><td>146</td><td>Zsh + sed</td><td>230327T000631Z</td><td><a href="https://codegolf.stackexchange.com/questions/32024/i-am-passive-aggressive-and-want-to-insult-my-boss-without-him-finding-out/259489#259489">roblogic</a></td></tr>
 <tr d-ix="2"><td>136</td><td>PHP</td><td>161220T015016Z</td><td><a href="https://codegolf.stackexchange.com/questions/32024/i-am-passive-aggressive-and-want-to-insult-my-boss-without-him-finding-out/103802#103802">Titus</a></td></tr>
 <tr d-ix="3"><td>328</td><td>PHP</td><td>160404T205441Z</td><td><a href="https://codegolf.stackexchange.com/questions/32024/i-am-passive-aggressive-and-want-to-insult-my-boss-without-him-finding-out/77114#77114">St3an</a></td></tr>
@@ -43,14 +43,14 @@
 <tr d-ix="14"><td>184</td><td>Perl</td><td>140619T095517Z</td><td><a href="https://codegolf.stackexchange.com/questions/32024/i-am-passive-aggressive-and-want-to-insult-my-boss-without-him-finding-out/32025#32025">Martin E</a></td></tr>
 <tr d-ix="15"><td>140</td><td>Ruby</td><td>140619T181251Z</td><td><a href="https://codegolf.stackexchange.com/questions/32024/i-am-passive-aggressive-and-want-to-insult-my-boss-without-him-finding-out/32061#32061">KChaloux</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Javascript: <s>130</s> 126 bytes</h1>
+<div id="pu0" class="pu"><h1>Javascript: <s>128</s> 124 bytes</h1>
 <p>(With the added ability to change insults!)</p>
-<pre class="lang-js prettyprint-override"><code>s=(p,i,n=0,s=1,r=&quot;&quot;)=&gt;([...p].map(l=&gt;(l==i[n]&amp;&amp;s?(l!=&quot; &quot;?r+=i[(s=0,n-1)]==&quot; &quot;?`
+<pre class="lang-js prettyprint-override"><code>(p,i,n=0,s=1,r=&quot;&quot;)=&gt;([...p].map(l=&gt;(l==i[n]&amp;&amp;s?(l!=&quot; &quot;?r+=i[(s=0,n-1)]==&quot; &quot;?`
 
 `:`
 `:0,n++):0,/[.?]/.test(l)?s=1:0,r+=l)),r)
 </code></pre>
-<p><a href="https://tio.run/##VVTBjts2EL3vV0x9SGysrDS3IoVrOKg30CUFNsfFAjuWxxbXFCmQlF19/fYNaWfTgyFpPHyc9@bNvPKZYxvMkJbnP97e4mo@VKZyq9@ruPpchdVstlj9NX@q63p4rnse5hafdrUyT@75w4e4ntvfVjOarcM9QvOIc275efG8ysGXu7uXLy/4IXp/v8Dj01O9fv5UJ4lpbhdr3IEgztrFogqLt9a76K3U1h/ncX43@1s40FcfY0WdvxAHodQZd4xrahJ1HKn1PWKe@ok4JXHJeIccTtRQkFbMWfbE1iImtLOM7IMP@as3seOBLMdED8Hsearpu0/0OiKQE/jVB5Mm8gcyqabtWcJU8ncm3aJNxIMuwbtjhi71aJmnUohCBRDWA/qehHu6CLjgTysKZxwNHJKmDZDA7KysaXNIErT2KhOI5l9FGGM5a9zZWyV3CL7PuEdJy6MvHK4KlCoaip0f7Z5iYreni0n4TEWNko5kXFHTBvc0H3uKPEFlMlER4hcg7LPEO9CoFRc6dBz2@m76IfizkPYO@MlCxg2uaQg034OU@KSYPykaC2lr@iZOAi6fKA6SU6pyNIvtTzzlgm/HDyNK/D9GUR39b7X5saavIMdZPK0euCGjoktRpI@Ah1TU@@wmdspOooQzxHiUXvqdFIM8WD6J63jEn8okBVyxLjbINkQnXII0F1dMwzvVFa6MvfeoGW/eqTIqfscQqfODQLV/AkV/K0gNmuhgQtYWVsKxAle88@663rgxyc1VOgd0EOjBap7SvV89xscgAM/ppuBm0qqkepThHUgO4VqzVyZZjWj9MEw0WHZOOaq4Jvbs@AgwSO/H0Apk/pGMerOhJcyjPJcA9adfpuw6NDqQfjx2akQ2e3K@qIdCXaWdS5j5wK4VjMNZbJnQ0u/3sc3YDMWC8RiCa8HiagxvngCwHLxB1DutKusNeTJ3h1UQI4cp87YXnmI2cboY3Aph1M3VdfQ9SWx5EMJiHJNxV0PHwrfT6btIXkZ8ZIMCGqg2GHQG6uuoZjNiMw0WK6ZHoVDr0Rw79ODn6VKD9j9fCPxxUD5RCJso3rZNhAhWCCP2Km32x8eIMQS4qjO6HTYkY13UswrrstlS85029O1xu/mxpYfmcTu7Wyz@fPsP" rel="nofollow noreferrer">Try it online!</a></p>
+<p><a href="https://tio.run/##VVTBjts2EL3vV0x9SGysrDS3IoVrOKg30CUFNsfFAjuWxxbXFCmQlF19/fYNaWfTgyFpPHyc9@bNvPKZYxvMkJbnP97i6m0@VKZyq9@ruPpchdVstlj9NX@q63p4rnse5hafdrUyT@75w4e4ntvfVjOarcM9QvOIc275efG8ysGXu7uXLy/4IXp/v8Dj01O9fv5UJ4lpbhdr3IEgztrFogqLt9a76K3U1h/ncX43@1s40FcfY0WdvxAHodQZd4xrahJ1HKn1PWKe@ok4JXHJeIccTtRQkFbMWfbE1iImtLOM7IMP@as3seOBLMdED8Hsearpu0/0OiKQE/jVB5Mm8gcyqabtWcJU8ncm3aJNxIMuwbtjhi71aJmnUohCBRDWA/qehHu6CLjgTysKZxwNHJKmDZDA7KysaXNIErT2KhOI5l9FGGM5a9zZWyV3CL7PuEdJy6MvHK4KlCoaip0f7Z5iYreni0n4TEWNko5kXFHTBvc0H3uKPEFlMlER4hcg7LPEO9CoFRc6dBz2@m76IfizkPYO@MlCxg2uaQg034OU@KSYPykaC2lr@iZOAi6fKA6SU6pyNIvtTzzlgm/HDyNK/D9GUR39b7X5saavIMdZPK0euCGjoktRpI@Ah1TU@@wmdspOooQzxHiUXvqdFIM8WD6J63jEn8okBVyxLjbINkQnXII0F1dMwzvVFa6MvfeoGW/eqTIqfscQqfODQLV/AkV/K0gNmuhgQtYWVsKxAle88@663rgxyc1VOgd0EOjBap7SvV89xscgAM/ppuBm0qqkepThHUgO4VqzVyZZjWj9MEw0WHZOOaq4Jvbs@AgwSO/H0Apk/pGMerOhJcyjPJcA9adfpuw6NDqQfjx2akQ2e3K@qIdCXaWdS5j5wK4VjMNZbJnQ0u/3sc3YDMWC8RiCa8HiagxvngCwHLxB1DutKusNeTJ3h1UQI4cp87YXnmI2cboY3Aph1M3VdfQ9SWx5EMJiHJNxV0PHwrfT6btIXkZ8ZIMCGqg2GHQG6uuoZjNiMw0WK6ZHoVDr0Rw79ODn6VKD9j9fCPxxUD5RCJso3rZNhAhWCCP2Km32x8eIMQS4qjO6HTYkY13UswrrstlS85029O1xu/mxpYfmcTu7Wyz@fPsP" rel="nofollow noreferrer">Try it online!</a></p>
 <p>readable version:</p>
 <pre class="lang-js prettyprint-override"><code>function secretInsult(passage, insult) {
     // initialize variables
