--- a/q/275563.html
+++ b/q/275563.html
@@ -26,17 +26,52 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>5625</td><td>Vyxal gr</td><td>240916T201441Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275565#275565">pacman25</a></td></tr>
-<tr d-ix="1"><td>130</td><td>SageMath</td><td>240917T105516Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275585#275585">Sophia A</a></td></tr>
-<tr d-ix="2"><td>167</td><td>Rust</td><td>240917T104954Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275584#275584">bzr</a></td></tr>
-<tr d-ix="3"><td>009</td><td>Brachylog</td><td>240917T093109Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275581#275581">Fatalize</a></td></tr>
-<tr d-ix="4"><td>011</td><td>Japt</td><td>240916T223015Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275569#275569">Shaggy</a></td></tr>
-<tr d-ix="5"><td>069</td><td>Ruby</td><td>240917T075106Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275579#275579">G B</a></td></tr>
-<tr d-ix="6"><td>008</td><td>05AB1E</td><td>240917T071811Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275578#275578">Kevin Cr</a></td></tr>
-<tr d-ix="7"><td>059</td><td>JavaScript ES6</td><td>240916T201812Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275566#275566">Arnauld</a></td></tr>
+<tr d-ix="0"><td>059</td><td>JavaScript ES6</td><td>240916T201812Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275566#275566">Arnauld</a></td></tr>
+<tr d-ix="1"><td>5625</td><td>Vyxal gr</td><td>240916T201441Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275565#275565">pacman25</a></td></tr>
+<tr d-ix="2"><td>130</td><td>SageMath</td><td>240917T105516Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275585#275585">Sophia A</a></td></tr>
+<tr d-ix="3"><td>167</td><td>Rust</td><td>240917T104954Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275584#275584">bzr</a></td></tr>
+<tr d-ix="4"><td>009</td><td>Brachylog</td><td>240917T093109Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275581#275581">Fatalize</a></td></tr>
+<tr d-ix="5"><td>011</td><td>Japt</td><td>240916T223015Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275569#275569">Shaggy</a></td></tr>
+<tr d-ix="6"><td>069</td><td>Ruby</td><td>240917T075106Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275579#275579">G B</a></td></tr>
+<tr d-ix="7"><td>008</td><td>05AB1E</td><td>240917T071811Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275578#275578">Kevin Cr</a></td></tr>
 <tr d-ix="8"><td>097</td><td>Python</td><td>240916T201904Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275567#275567">TheLittl</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a> <code>gr</code>, 45 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 5.625 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES6), 59 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>p=&gt;eval(&quot;for(d=q=1;q&lt;d--|q%d&amp;&amp;n%d?1:d=n=d-1&amp;&amp;[++q+p]+q;)q&quot;)
+</code></pre>
+<p><a href="https://tio.run/##TcpLCsIwEADQvccoNCRkUpgWCVqjByldhE4ilphPK11597j1rd9qD7sv2yt/VEzkqjc1m7s7bOCNTxsnUwyO5UZKfUtLjMWWHnglEw0pZGySssg8yzKK0oi6pLin4LqQnnzqYYAzaEAEHAD13L1t5l6I03/z/KJ7FKL@AA" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<h3>faster / more readable, 61 bytes</h3>
+
+<pre class="lang-javascript prettyprint-override"><code>p=&gt;{for(d=q=1;q&lt;d--|q%d&amp;&amp;n%d?1:d=n=d-1&amp;&amp;[++q+p]+q;);return q}
+</code></pre>
+<p><a href="https://tio.run/##Tcq7DsIgFADQ3a9wKYEATW4bQxTRD2k6kF4wNpVXq4v67bh65jPbl12nck@bDBFd9aYmc3n7WCiabEDnM0r5yQ0SEhq8wglNMCiBkIHzzNPIs2a6uO1Zwj5/6xTDGhfXLvFGh0704iCUABDQC1Bj@7CJesZ2/83To@qAsfoD" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<pre class="lang-javascript prettyprint-override"><code>p =&gt; {              // p = input prime
+  for(              // loop:
+    d =             //   d = divisor
+    q = 1;          //   q = the prime we're looking for
+    q &lt; d-- |       //   if q is less than d (decrement d afterwards)
+    q % d           //   or d is not a divisor of q
+    &amp;&amp;              //   AND
+    n % d ?         //   q is not a divisor of n:
+      1             //     keep searching
+    :               //   else:
+      d = n =       //     update d and n:
+        d - 1       //       if d is not equal to 1 (meaning that
+        &amp;&amp;          //       either q or n is composite):
+        [++q + p] + //         increment q and build the new
+        q;          //         candidate number
+  );                // end of for()
+  return q          // return q
+}                   //
+</code></pre>
+<h3>recursive, 55 bytes</h3>
+
+<pre class="lang-javascript prettyprint-override"><code>p=&gt;(g=d=&gt;q&lt;d--|q%d&amp;&amp;n%d?g(d):d-1?g(n=[++q+p]+q):q)(q=1)
+</code></pre>
+<p><a href="https://tio.run/##DctLDoIwEADQq7CBdNIOYSRKQhw8CGHRUCAo9mOJC@PZreze5t31W8fxtfodrTNTmjl57sTChrtwNYjfkJuisLm5LcJAa5AOWO6lDNIPMkAbQAQmSKOz0W1TublF9CdVq7NqFJGiWlEzlE/thc24y2ZhASD9nN/XoyTEuOvxgXH9TEyXqqr@" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a> <code>gr</code>, 45 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 5.625 bytes</h1>
 <pre><code>Þp'⁰+Jæ
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyLigKZnPUFyIiwiIiwiw55wJ+KBsCtKw6YiLCIiLCIyXG4zXG41XG43XG4xMVxuMTNcbjE3XG4xOVxuMjNcbjk3MjEiXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -59,19 +94,19 @@
 <p>7 bytes without vyncode, some filter magic.</p>
 <p>-1 from <code>r</code> flag</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.sagemath.org" rel="nofollow noreferrer">SageMath</a>, 130 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.sagemath.org" rel="nofollow noreferrer">SageMath</a>, 130 bytes</h1>
 <pre><code>def g(p): 
  for q in Primes(): 
   if is_prime(q+(p+q)*10^(1+int(log(q)/log(10)))):return q
 print([g(p) for p in prime_range(100)])
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, 167 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, 167 bytes</h1>
 <pre class="lang-rust prettyprint-override"><code>let g=|n|{if n==2{return true;}for i in 2..n{if n%i==0{return false;}}true};let f=|p:i32|{for q in 2..{if g(q)&amp;&amp;g(format!(&quot;{}{q}&quot;,p+q).parse().unwrap()){return q;}}0};
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=NY5BCsIwEEWvMhYsCWoodSOWHCaLpATasUkTXCQ5iZsKigtP5G1srF19-Lz3Z24P60c3vRVCLzQSCuHpnTqcPq9OOmh5xBi0AuS8DlY6bxGc9bJJ6mJBg0aoGcMfstWcVyukRDfOVMpwavKW4nE462MdQ1bNX81mSwwty5bMfS_chhQhBZOK_bAzlA3CjpJQ5vFqxUAoXS-Yeb1KzfLuPS05TUt-AQ" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, 9 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, 9 bytes</h1>
 <pre><code>;.+;.cṗ∧ṗ
 </code></pre>
 <p><a href="https://tio.run/##SypKTM6ozMlPN/r/31pP21ov@eHO6Y86lgPJ//8tzY0M/0cBAA" rel="nofollow noreferrer" title="Brachylog – Try It Online">Try it online!</a></p>
@@ -82,7 +117,7 @@ print([g(p) for p in prime_range(100)])
        ∧ṗ   …and Output itself is prime
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, <s>13</s> 11 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, <s>13</s> 11 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>@°s+X*j)j}a
 </code></pre>
 <p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=QLBzK1gqailqfWE&amp;input=OTcyMQ" rel="nofollow noreferrer">Try it</a> or <a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=QLBzK1gqailqfWE&amp;input=WzIsMyw1LDcsMTEsMTMsMTcsOTcyMV0tbQ" rel="nofollow noreferrer">run all test cases</a></p>
@@ -98,13 +133,13 @@ print([g(p) for p in prime_range(100)])
           a     :Get the first integer &gt;=0 that returns truthy
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 69 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 69 bytes</h1>
 
 <pre class="lang-ruby prettyprint-override"><code>-&gt;p{2.step.find{|q|(2...r=&quot;#{q+p}#{q}&quot;.to_i).all?{|x|r*q%x&gt;0||x==q}}}
 </code></pre>
 <p><a href="https://tio.run/##KypNqvyfZvtf166g2kivuCS1QC8tMy@luqawRsNIT0@vyFZJubpQu6AWSNYq6ZXkx2dq6iXm5NhX11TUFGkVqlbYGdTUVNjaFtbW1v4vUEiLtjQ3Moz9DwA" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 8 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 8 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>∞Ø.Δ+y«p
 </code></pre>
 <p><a href="https://tio.run/##yy9OTMpM/f//Uce8wzP0zk3Rrjy0uuD/fyMA" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##AS0A0v9vc2FiaWX/MjXDhXB2ecKpPyIg4oaSICI//@KInsOYLs6Uwq4recKrcP99LP8" rel="nofollow noreferrer">verify all test cases</a>.</p>
@@ -119,22 +154,6 @@ print([g(p) for p in prime_range(100)])
          # (after which the found result is output implicitly)
 </code></pre>
 <p>Although we skip prime <code>2</code> in the infinite list, since the infinite list starts at 1 and the n'th prime builtin is 0-based, it doesn't matter for the challenge, since appending a <code>2</code> to the sum will always result in an even number, and therefore never a prime.</p>
-</div>
-<div id="pu7" class="pu"><h1>JavaScript (ES6), 59 bytes</h1>
-
-<pre class="lang-javascript prettyprint-override"><code>p=&gt;eval(&quot;for(d=q=1;q&lt;d--|q%d&amp;&amp;n%d?1:d=n=d-1&amp;&amp;[++q+p]+q;)q&quot;)
-</code></pre>
-<p><a href="https://tio.run/##TcpLCsIwEADQvccoNCRkUpgWCVqjByldhE4ilphPK11597j1rd9qD7sv2yt/VEzkqjc1m7s7bOCNTxsnUwyO5UZKfUtLjMWWHnglEw0pZGySssg8yzKK0oi6pLin4LqQnnzqYYAzaEAEHAD13L1t5l6I03/z/KJ7FKL@AA" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-<h3>faster, 61 bytes</h3>
-
-<pre class="lang-javascript prettyprint-override"><code>p=&gt;{for(d=q=1;q&lt;d--|q%d&amp;&amp;n%d?1:d=n=d-1&amp;&amp;[++q+p]+q;);return q}
-</code></pre>
-<p><a href="https://tio.run/##Tcq7DsIgFADQ3a9wKYEATW4bQxTRD2k6kF4wNpVXq4v67bh65jPbl12nck@bDBFd9aYmc3n7WCiabEDnM0r5yQ0SEhq8wglNMCiBkIHzzNPIs2a6uO1Zwj5/6xTDGhfXLvFGh0704iCUABDQC1Bj@7CJesZ2/83To@qAsfoD" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-<h3>recursive, 55 bytes</h3>
-
-<pre class="lang-javascript prettyprint-override"><code>p=&gt;(g=d=&gt;q&lt;d--|q%d&amp;&amp;n%d?g(d):d-1?g(n=[++q+p]+q):q)(q=1)
-</code></pre>
-<p><a href="https://tio.run/##DctLDoIwEADQq7CBdNIOYSRKQhw8CGHRUCAo9mOJC@PZreze5t31W8fxtfodrTNTmjl57sTChrtwNYjfkJuisLm5LcJAa5AOWO6lDNIPMkAbQAQmSKOz0W1TublF9CdVq7NqFJGiWlEzlE/thc24y2ZhASD9nN/XoyTEuOvxgXH9TEyXqqr@" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu8" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 97 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>g=lambda x:all(x%i for i in range(2,x))
